fix: Improve blog readability

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -694,3 +694,9 @@ figure {
 figcaption {
   font-weight: bold;
 }
+
+.blog-page {
+  max-width: 65ch;
+  margin-left: auto;
+  margin-right: auto;
+}
